// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Snapshot: Store initial state shape should match the expected auth state shape 1`] = `
{
  "isAdmin": false,
  "isAuthenticated": false,
  "sitePassword": null,
  "username": "anonymous",
}
`;

exports[`Snapshot: Store initial state shape should match the expected marker state shape 1`] = `
{
  "creationMode": "idle",
  "isDirty": "boolean",
  "isNoSleep": "boolean",
  "markerMode": "sleep",
  "nonwearMarkersType": true,
  "sleepMarkersType": true,
}
`;

exports[`Snapshot: Constants MARKER_TYPES should be stable 1`] = `
{
  "MAIN_SLEEP": "MAIN_SLEEP",
  "NAP": "NAP",
}
`;

exports[`Snapshot: Constants ALGORITHM_TYPES should be stable 1`] = `
{
  "COLE_KRIPKE_1992_ACTILIFE": "cole_kripke_1992_actilife",
  "COLE_KRIPKE_1992_ORIGINAL": "cole_kripke_1992_original",
  "MANUAL": "manual",
  "SADEH_1994_ACTILIFE": "sadeh_1994_actilife",
  "SADEH_1994_ORIGINAL": "sadeh_1994_original",
}
`;

exports[`Snapshot: Marker payload serialization sleep marker payload matches expected shape 1`] = `
{
  "is_no_sleep": false,
  "needs_consensus": false,
  "nonwear_markers": [],
  "notes": "",
  "sleep_markers": [
    {
      "marker_index": 1,
      "marker_type": "MAIN_SLEEP",
      "offset_timestamp": 1704099600,
      "onset_timestamp": 1704070800,
    },
  ],
}
`;

exports[`Snapshot: Marker payload serialization no-sleep payload matches expected shape 1`] = `
{
  "is_no_sleep": true,
  "needs_consensus": false,
  "nonwear_markers": [],
  "notes": "No main sleep observed",
  "sleep_markers": [],
}
`;

exports[`Snapshot: Marker payload serialization mixed markers payload matches expected shape 1`] = `
{
  "is_no_sleep": false,
  "needs_consensus": true,
  "nonwear_markers": [
    {
      "end_timestamp": 1704049200,
      "marker_index": 1,
      "start_timestamp": 1704042000,
    },
  ],
  "notes": "Good recording quality",
  "sleep_markers": [
    {
      "marker_index": 1,
      "marker_type": "MAIN_SLEEP",
      "offset_timestamp": 1704099600,
      "onset_timestamp": 1704070800,
    },
    {
      "marker_index": 2,
      "marker_type": "NAP",
      "offset_timestamp": 1704121200,
      "onset_timestamp": 1704114000,
    },
  ],
}
`;

exports[`Snapshot: Export column configuration default export column categories should be stable 1`] = `
[
  "File Info",
  "Period Info",
  "Time Markers",
  "Duration Metrics",
  "Awakening Metrics",
  "Quality Indices",
  "Activity Metrics",
  "Algorithm Info",
  "Annotation Info",
]
`;

exports[`Snapshot: Export column configuration default column names list should be stable 1`] = `
[
  "Filename",
  "File ID",
  "Participant ID",
  "Study Date",
  "Period Index",
  "Marker Type",
  "Onset Time",
  "Offset Time",
  "Onset Datetime",
  "Offset Datetime",
  "Time in Bed (min)",
  "Total Sleep Time (min)",
  "WASO (min)",
  "Sleep Onset Latency (min)",
  "Number of Awakenings",
  "Avg Awakening Length (min)",
  "Sleep Efficiency (%)",
  "Movement Index",
  "Fragmentation Index",
  "Sleep Fragmentation Index",
  "Total Activity Counts",
  "Non-zero Epochs",
  "Algorithm",
  "Detection Rule",
  "Verification Status",
  "Scored By",
  "Is No Sleep",
  "Needs Consensus",
  "Notes",
]
`;

exports[`Snapshot: Auto-score request payload auto-score request shape should be stable 1`] = `
{
  "algorithm": "sadeh_1994_actilife",
  "detection_rule": "consecutive_onset3s_offset5s",
  "force_overwrite": false,
}
`;

exports[`Snapshot: Diary entry payload diary entry create payload should be stable 1`] = `
{
  "bed_time": "22:30",
  "got_up": "07:15",
  "lights_out": "22:45",
  "nap_1_end": "13:45",
  "nap_1_start": "13:00",
  "nap_2_end": null,
  "nap_2_start": null,
  "nap_3_end": null,
  "nap_3_start": null,
  "nonwear_1_end": "09:30",
  "nonwear_1_reason": "Shower",
  "nonwear_1_start": "08:00",
  "nonwear_2_end": null,
  "nonwear_2_reason": null,
  "nonwear_2_start": null,
  "nonwear_3_end": null,
  "nonwear_3_reason": null,
  "nonwear_3_start": null,
  "notes": "Normal night",
  "number_of_awakenings": 2,
  "sleep_quality": 3,
  "time_to_fall_asleep_minutes": 15,
  "wake_time": "07:00",
}
`;

exports[`Snapshot: Diary entry payload diary entry response shape should be stable 1`] = `
{
  "analysis_date": "2024-01-01",
  "bed_time": "22:30",
  "file_id": 42,
  "got_up": "07:15",
  "id": 1,
  "lights_out": "22:45",
  "nap_1_end": "13:45",
  "nap_1_start": "13:00",
  "nap_2_end": null,
  "nap_2_start": null,
  "nap_3_end": null,
  "nap_3_start": null,
  "nonwear_1_end": "09:30",
  "nonwear_1_reason": "Shower",
  "nonwear_1_start": "08:00",
  "nonwear_2_end": null,
  "nonwear_2_reason": null,
  "nonwear_2_start": null,
  "nonwear_3_end": null,
  "nonwear_3_reason": null,
  "nonwear_3_start": null,
  "notes": "Normal night",
  "number_of_awakenings": 2,
  "sleep_quality": 3,
  "time_to_fall_asleep_minutes": 15,
  "wake_time": "07:00",
}
`;

exports[`Snapshot: File upload response file upload response shape should be stable 1`] = `
{
  "file_id": 1,
  "filename": "participant_001.csv",
  "message": "File uploaded successfully",
  "row_count": 1440,
  "status": "ready",
}
`;

exports[`Snapshot: Date status response date status shape should be stable 1`] = `
{
  "complexity_post": null,
  "complexity_pre": 3,
  "date": "2024-01-01",
  "has_auto_score": true,
  "has_markers": true,
  "is_no_sleep": false,
  "needs_consensus": false,
}
`;

exports[`Snapshot: Date status response unscored date status shape should be stable 1`] = `
{
  "complexity_post": null,
  "complexity_pre": null,
  "date": "2024-01-02",
  "has_auto_score": false,
  "has_markers": false,
  "is_no_sleep": false,
  "needs_consensus": false,
}
`;

exports[`Snapshot: Settings/preferences user settings response shape should be stable 1`] = `
{
  "default_algorithm": "sadeh_1994_actilife",
  "device_preset": "actigraph",
  "epoch_length_seconds": 60,
  "extra_settings": null,
  "night_end_hour": "12",
  "night_start_hour": "18",
  "preferred_display_column": "Axis1",
  "skip_rows": 0,
  "sleep_detection_rule": "consecutive_onset3s_offset5s",
  "view_mode_hours": 24,
}
`;

exports[`Snapshot: Settings/preferences VERIFICATION_STATUSES should be stable 1`] = `
{
  "DISPUTED": "disputed",
  "DRAFT": "draft",
  "RESOLVED": "resolved",
  "SUBMITTED": "submitted",
  "VERIFIED": "verified",
}
`;

exports[`Snapshot: Settings/preferences FILE_STATUSES should be stable 1`] = `
{
  "FAILED": "failed",
  "PENDING": "pending",
  "PROCESSING": "processing",
  "READY": "ready",
  "UPLOADING": "uploading",
}
`;

exports[`Snapshot: Settings/preferences SLEEP_DETECTION_RULES should be stable 1`] = `
{
  "CONSECUTIVE_3S_5S": "consecutive_onset3s_offset5s",
  "CONSECUTIVE_5S_10S": "consecutive_onset5s_offset10s",
  "TUDOR_LOCKE_2014": "tudor_locke_2014",
}
`;
